# studybuddy

./: .gitignore  AI Engineering Bootcamp - TOC.md  README.md  StudyBuddy design guidelines.md  building-studybuddy-v4.md  building-studybuddy-v5.md  prompt-backend.md  prompt-frontend.md  studybuddy-v4-prompts.md  studybuddy-wireframes.html  studybuddy_v3_implementation.md  topic-list.md  vercel.json
v1-basic-chatbot/: .gitignore  README.md  basic_chatbot.ipynb  package-lock.json  pyproject.toml  requirements.txt
v1-basic-chatbot/api/: index.py
v1-basic-chatbot/backend/: main.py
v1-basic-chatbot/frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css
v1-basic-chatbot/frontend/src/app/: layout.tsx  page.tsx
v1-basic-chatbot/frontend/src/components/: LoadingDots.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx
v10-full-stack/: .env.example  README.md  pyproject.toml
v10-full-stack/api/: index.py  requirements.txt
v10-full-stack/api/agents/: __init__.py
v10-full-stack/api/database/: __init__.py  connection.py  models.py
v10-full-stack/api/services/: curriculum.py  flashcard.py  indexing.py  retrieval.py
v10-full-stack/frontend/: index.html  next.config.ts  package-lock.json  package.json
v10-full-stack/frontend/src/: App.jsx
v10-full-stack/frontend/src/app/: globals.css  layout.tsx  page.tsx
v10-full-stack/frontend/src/components/: CreateProgram.jsx  CreateProgram.tsx  Dashboard.jsx  Dashboard.tsx  DocumentManager.jsx  DocumentManager.tsx  Flashcard.jsx  Flashcard.tsx  Sidebar.jsx  (+3 more)
v11-mcp-connectors/: .env.example  README.md  pyproject.toml
v11-mcp-connectors/api/: __init__.py  index.py  requirements.txt
v11-mcp-connectors/api/agents/: __init__.py  tutor.py
v11-mcp-connectors/api/database/: __init__.py  connection.py  models.py
v11-mcp-connectors/api/services/: __init__.py  curriculum.py  flashcard.py
v11-mcp-connectors/frontend/: package-lock.json  package.json
v3-the-agent-loop/: .gitignore  README.md  pyproject.toml  the-agent-loop.ipynb  the_agent_loop.ipynb
v3-the-agent-loop/api/: index.py  requirements.txt
v3-the-agent-loop/documents/: a-case-of-identity.txt  the-adventure-of-the-copper-beeches.txt  the-adventure-of-the-speckled-band.txt  the-boscombe-valley-mystery.txt  the-five-orange-pips.txt  the-man-with-the-twisted-lip.txt  the-red-headed-league.txt
v3-the-agent-loop/frontend/: app.js  index.html  package.json  styles.css
v4-agentic-rag/: .gitignore  README.md  agentic-rag.ipynb  pyproject.toml
v4-agentic-rag/api/: index.py  requirements.txt
v4-agentic-rag/documents/: ref-agent-debugging.md  ref-creating-agents.md  ref-langchain-quickref.md  ref-langsmith-quickref.md  ref-memory-systems.md  ref-qdrant-quickref.md  ref-rag-fundamentals.md  ref-rag-problems.md
v4-agentic-rag/frontend/: app.js  index.html  package.json  styles.css
v4-agentic-rag/frontend/images/: site.webmanifest
v5-multi-agent/: README.md  pyproject.toml
v5-multi-agent/api/: __init__.py  index.py  requirements.txt  spaced_repetition.py  state.py
v5-multi-agent/api/agents/: __init__.py  card_generator.py  quality_checker.py  scheduler.py  supervisor.py  tutor.py
v5-multi-agent/api/documents/: ref-agents-and-agency.md  ref-ai-engineering-fundamentals.md  ref-chain-of-thought-2022.md  ref-creating-agents.md  ref-document-indexing.md  ref-embeddings.md  ref-langsmith-quickref.md  ref-rag-2020.md  ref-ragas-2023.md  ref-retrieval-patterns.md  ref-supervisor-pattern.md  ref-tool-use.md
v5-multi-agent/documents/: ref-chain-of-thought-2022.md  ref-evaluation-metrics.md  ref-langgraph-quickref.md  ref-memory-systems.md  ref-openai-api-quickref.md  ref-prompt-engineering.md  ref-qdrant-quickref.md  ref-rag-problems.md  ref-reflection-pattern.md  ref-similarity-search.md  ref-vector-databases.md
v5-multi-agent/frontend/: index.html  package-lock.json  package.json
v5-multi-agent/frontend/.next/: prerender-manifest.json  trace
v6-agent-memory/: README.md  pyproject.toml  studybuddy.db
v6-agent-memory/api/: __init__.py  index.py  requirements.txt  state.py
v6-agent-memory/api/agents/: __init__.py  card_generator.py  quality_checker.py  scheduler.py  supervisor.py
v6-agent-memory/api/database/: __init__.py  connection.py  models.py
v6-agent-memory/api/services/: __init__.py  spaced_repetition.py
v6-agent-memory/documents/: ref-chunking-strategies.md  ref-document-indexing.md  ref-langgraph-quickref.md  ref-react-2022.md  ref-react-pattern.md  ref-reflection-pattern.md
v6-agent-memory/frontend/: index.html  package-lock.json  package.json
v8-evaluation/: README.md  pyproject.toml
v8-evaluation/api/: index.py  state.py
v8-evaluation/api/agents/: curriculum_planner.py  supervisor.py
v8-evaluation/api/database/: models.py
v8-evaluation/api/evaluation/: __init__.py  dataset_builder.py  testset_generator.py
v8-evaluation/api/services/: curriculum_service.py
v8-evaluation/documents/: ref-ai-engineering-fundamentals.md  ref-defining-tools.md  ref-langchain-quickref.md  ref-multi-agent-patterns.md  ref-plan-and-execute-pattern.md  ref-ragas-2023.md  ref-streaming.md  ref-tool-use.md
v8-evaluation/frontend/: index.html  next.config.ts  package-lock.json  package.json
v8-evaluation/tests/: test_evaluation.py
v9-optimized-retrieval/: README.md  pyproject.toml
v9-optimized-retrieval/api/: __init__.py  index.py  state.py
v9-optimized-retrieval/api/agents/: __init__.py  scheduler.py  supervisor.py
v9-optimized-retrieval/api/database/: __init__.py  models.py
v9-optimized-retrieval/api/evaluation/: __init__.py  dashboard.py  evaluators.py  retrieval_comparison.py  run_baseline.py
v9-optimized-retrieval/api/services/: __init__.py  background_generator.py  flashcard_cache.py  indexing.py  retrieval.py
v9-optimized-retrieval/documents/: ref-agent-debugging.md  ref-agentic-rag-pattern.md  ref-agents-and-agency.md  ref-openai-api-quickref.md  ref-plan-and-execute-pattern.md  ref-rag-fundamentals.md  ref-react-2022.md
v9-optimized-retrieval/frontend/: index.html  package-lock.json  package.json
(+290 files in other folders)
