[project]
name = "studybuddy-v10"
version = "10.0.0"
description = "StudyBuddy v10 - Full Stack Application with Learning Programs"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",  # File uploads
    "aiofiles>=24.1.0",  # Async file operations
    "websockets>=13.0",  # WebSocket support

    # LangChain ecosystem
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-qdrant>=1.0.0",

    # LangGraph for agents
    "langgraph>=1.0.0",

    # Vector database
    "qdrant-client>=1.12.0",

    # Utilities
    "python-dotenv>=1.0.0",

    # Persistence
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # Advanced Retrieval (from v9)
    "langchain-experimental>=0.3.0",  # SemanticChunker
    "cohere>=5.0.0",  # Reranking
    "rank-bm25>=0.2.2",  # BM25 sparse retrieval

    # Document processing
    "pypdf>=4.0.0",  # PDF parsing
    "unstructured>=0.15.0",  # Markdown and other formats
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
