[project]
name = "studybuddy-v5"
version = "5.0.0"
description = "StudyBuddy v5 - Multi-Agent Architecture with Supervisor Pattern"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-qdrant>=1.0.0",
    "langgraph>=1.0.0",
    "qdrant-client>=1.12.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
